Run models using modlowapi

--- a/notebooks/ex11.ipynb
+++ b/notebooks/ex11.ipynb
@@ -53,6 +53,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3881f3af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import modflowapi\n",
+    "from modflowapi import Callbacks\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "00dee7ca",
    "metadata": {},
@@ -62,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "91c4b922",
    "metadata": {},
    "outputs": [],
@@ -80,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d92da603",
    "metadata": {},
    "outputs": [],
@@ -100,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9d31c657",
    "metadata": {},
    "outputs": [],
@@ -118,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "91aba9df",
    "metadata": {},
    "outputs": [],
@@ -137,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "04fc42f4",
    "metadata": {},
    "outputs": [],
@@ -165,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "22cc9951",
    "metadata": {},
    "outputs": [],
@@ -187,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1c566f9b",
    "metadata": {},
    "outputs": [],
@@ -206,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "06051f9e",
    "metadata": {},
    "outputs": [],
@@ -240,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a0f6a9b1",
    "metadata": {},
    "outputs": [],
@@ -263,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "561711fc",
    "metadata": {},
    "outputs": [],
@@ -287,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "65ece80a",
    "metadata": {
     "lines_to_next_cell": 2
@@ -348,6 +360,10 @@
     "        budget_filerecord=budget_filerecord,\n",
     "        saverecord=[(\"HEAD\", \"ALL\"), (\"BUDGET\", \"ALL\")],\n",
     "    )\n",
+    "    \n",
+    "    # set sim_ws for use in run_model\n",
+    "    sim.sim_ws = sim_ws\n",
+    "    \n",
     "    return sim"
    ]
   },
@@ -363,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "ef1cd9c3",
    "metadata": {},
    "outputs": [],
@@ -465,12 +481,16 @@
     "        saverecord=[(\"CONCENTRATION\", \"ALL\"), (\"BUDGET\", \"LAST\")],\n",
     "        printrecord=[(\"CONCENTRATION\", \"LAST\"), (\"BUDGET\", \"LAST\")],\n",
     "    )\n",
+    "    \n",
+    "    # set sim_ws for use in run_model\n",
+    "    sim.sim_ws = sim_ws\n",
+    "    \n",
     "    return sim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "93b506a5",
    "metadata": {
     "lines_to_next_cell": 2
@@ -502,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "62336ab8",
    "metadata": {
     "lines_to_next_cell": 2
@@ -519,6 +539,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3153c8cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def callback_function(sim, callback_step):\n",
+    "    \"\"\"\n",
+    "    A demonstration function that dynamically adjusts recharge\n",
+    "    and pumping in a modflow-6 model through the MODFLOW-API\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    sim : modflowapi.ApiSimulation\n",
+    "        A simulation object for the solution group that is \n",
+    "        currently being solved\n",
+    "    step : enumeration\n",
+    "        modflowapi.Callbacks enumeration object that indicates\n",
+    "        the part of the solution modflow is currently in.\n",
+    "    \"\"\"\n",
+    "    if callback_step == Callbacks.initialize:\n",
+    "        print(\"callback_step == Callbacks.initialize\")\n",
+    "        #print(sim)\n",
+    "    \n",
+    "    if callback_step == Callbacks.stress_period_start:\n",
+    "        print(\"callback_step == Callbacks.stress_period_start\")\n",
+    "        #print(sim)\n",
+    "    \n",
+    "    if callback_step == Callbacks.timestep_start:\n",
+    "        #print(\"callback_step == Callbacks.timestep_start\")\n",
+    "        #print(sim)\n",
+    "        pass\n",
+    "        \n",
+    "    if callback_step == Callbacks.iteration_start:\n",
+    "        #print(\"callback_step == Callbacks.iteration_start\")\n",
+    "        #print(sim)\n",
+    "        pass\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0e2ab143",
    "metadata": {
@@ -531,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "a00c3ec8",
    "metadata": {
     "lines_to_next_cell": 2
@@ -542,16 +602,23 @@
     "def run_model(sims, silent=True):\n",
     "    success = True\n",
     "    if config.runModel:\n",
-    "        success = False\n",
-    "        sim_mf6gwf, *sim_mf6gwts = sims\n",
-    "        success, buff = sim_mf6gwf.run_simulation(silent=silent)\n",
+    "        # @todo update for other OSs\n",
+    "        dll = Path(os.path.join(os.environ[\"USERPROFILE\"], \"AppData\\\\Local\\\\flopy\\\\bin\", \"libmf6\"))\n",
+    "        #success = False\n",
+    "        sim_mf6gwf, *sim_mf6gwts = sims        \n",
+    "        sim_ws = sim_mf6gwf.sim_ws        \n",
+    "        modflowapi.run_simulation(dll, sim_ws, callback_function, verbose=False)\n",
+    "        # @todo figure out a way to check for errors and set success flag occordingly\n",
+    "        #success, buff = sim_mf6gwf.run_simulation(silent=silent)\n",
     "        if not success:\n",
-    "            print(buff)\n",
+    "            #print(buff)\n",
     "            return success\n",
     "        for sim_mf6gwt in sim_mf6gwts:\n",
-    "            success, buff = sim_mf6gwt.run_simulation(silent=silent)\n",
+    "            sim_ws = sim_mf6gwt.sim_ws\n",
+    "            #success, buff = sim_mf6gwt.run_simulation(silent=silent)\n",
+    "            modflowapi.run_simulation(dll, sim_ws, callback_function, verbose=False)\n",
     "            if not success:\n",
-    "                print(buff)\n",
+    "                #print(buff)\n",
     "                return success\n",
     "    return success"
    ]
@@ -568,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "c14c001d",
    "metadata": {},
    "outputs": [],
@@ -621,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "9047ca5a",
    "metadata": {
     "lines_to_next_cell": 2
@@ -696,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "9254e320",
    "metadata": {},
    "outputs": [],
@@ -710,14 +777,13 @@
     "    success = run_model(sims, silent=silent)\n",
     "    if success:\n",
     "        for sidx, solute in enumerate(parameter_dict[\"solutes\"]):\n",
-    "            \n",
     "            plot_results_ct(sims, idx, sidx, **parameter_dict)\n",
-    "            plot_results_cd(sims, idx, sidx, **parameter_dict)\n"
+    "            plot_results_cd(sims, idx, sidx, **parameter_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "d3e55848",
    "metadata": {},
    "outputs": [],
@@ -728,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "0542ad2b",
    "metadata": {
     "scrolled": false
@@ -738,7 +804,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "run_model  766.18 ms\n"
+      "callback_step == Callbacks.initialize\n",
+      "callback_step == Callbacks.stress_period_start\n",
+      "NORMAL TERMINATION OF SIMULATION\n",
+      "callback_step == Callbacks.initialize\n",
+      "callback_step == Callbacks.stress_period_start\n",
+      "NORMAL TERMINATION OF SIMULATION\n",
+      "callback_step == Callbacks.initialize\n",
+      "callback_step == Callbacks.stress_period_start\n",
+      "NORMAL TERMINATION OF SIMULATION\n",
+      "callback_step == Callbacks.initialize\n",
+      "callback_step == Callbacks.stress_period_start\n",
+      "NORMAL TERMINATION OF SIMULATION\n",
+      "callback_step == Callbacks.initialize\n",
+      "callback_step == Callbacks.stress_period_start\n",
+      "NORMAL TERMINATION OF SIMULATION\n",
+      "callback_step == Callbacks.initialize\n",
+      "callback_step == Callbacks.stress_period_start\n",
+      "NORMAL TERMINATION OF SIMULATION\n",
+      "run_model  2,236.51 ms\n"
      ]
     },
     {
