Replaced calls to modflowapi.ModflowApi with its implementation from: https://bit.ly/3r2pt2s

--- a/notebooks/ex11.ipynb
+++ b/notebooks/ex11.ipynb
@@ -482,8 +482,9 @@
     "        printrecord=[(\"CONCENTRATION\", \"LAST\"), (\"BUDGET\", \"LAST\")],\n",
     "    )\n",
     "    \n",
-    "    # set sim_ws for use in run_model\n",
-    "    sim.sim_ws = sim_ws\n",
+    "    # set vars for use in run_model\n",
+    "    sim.sim_ws = sim_ws    \n",
+    "    sim.solute = solute\n",
     "    \n",
     "    return sim"
    ]
@@ -560,12 +561,14 @@
     "        the part of the solution modflow is currently in.\n",
     "    \"\"\"\n",
     "    if callback_step == Callbacks.initialize:\n",
-    "        print(\"callback_step == Callbacks.initialize\")\n",
+    "        #print(\"callback_step == Callbacks.initialize\")\n",
     "        #print(sim)\n",
+    "        pass\n",
     "    \n",
     "    if callback_step == Callbacks.stress_period_start:\n",
-    "        print(\"callback_step == Callbacks.stress_period_start\")\n",
+    "        #print(\"callback_step == Callbacks.stress_period_start\")\n",
     "        #print(sim)\n",
+    "        pass\n",
     "    \n",
     "    if callback_step == Callbacks.timestep_start:\n",
     "        #print(\"callback_step == Callbacks.timestep_start\")\n",
@@ -603,23 +606,202 @@
     "    success = True\n",
     "    if config.runModel:\n",
     "        # @todo update for other OSs\n",
-    "        dll = Path(os.path.join(os.environ[\"USERPROFILE\"], \"AppData\\\\Local\\\\flopy\\\\bin\", \"libmf6\"))\n",
+    "        libmf6 = Path(os.path.join(os.environ[\"USERPROFILE\"], \"AppData\\\\Local\\\\flopy\\\\bin\", \"libmf6\"))\n",
     "        #success = False\n",
     "        sim_mf6gwf, *sim_mf6gwts = sims        \n",
-    "        sim_ws = sim_mf6gwf.sim_ws        \n",
-    "        modflowapi.run_simulation(dll, sim_ws, callback_function, verbose=False)\n",
-    "        # @todo figure out a way to check for errors and set success flag occordingly\n",
-    "        #success, buff = sim_mf6gwf.run_simulation(silent=silent)\n",
-    "        if not success:\n",
-    "            #print(buff)\n",
-    "            return success\n",
+    "        sim_ws = sim_mf6gwf.sim_ws\n",
+    "        \n",
+    "        #\n",
+    "        # emulate modflowapi.run_simulation(dll, sim_ws, callback_function, verbose=False)\n",
+    "        #\n",
+    "        callback = callback_function\n",
+    "        verbose = False\n",
+    "        _develop = False\n",
+    "        \n",
+    "        mf6 = modflowapi.ModflowApi(libmf6, working_directory=sim_ws)\n",
+    "        \n",
+    "        if verbose:\n",
+    "            version = mf6.get_version()\n",
+    "            print(f\"MODFLOW-6 API Version {version}\")\n",
+    "            print(\"Initializing MODFLOW-6 simulation\")\n",
+    "                \n",
+    "        mf6.initialize()\n",
+    "\n",
+    "        sim = modflowapi.extensions.ApiSimulation.load(mf6)\n",
+    "        \n",
+    "        if _develop:\n",
+    "            with open(f\"{sim_mf6gwf.sim_ws}/var_list.txt\", \"w\") as foo:\n",
+    "                for name in mf6.get_input_var_names():\n",
+    "                    foo.write(f\"{name}\\n\")\n",
+    "                    \n",
+    "        has_converged = False\n",
+    "        current_time = mf6.get_current_time()\n",
+    "        end_time = mf6.get_end_time()\n",
+    "        kperold = [0 for _ in range(sim.subcomponent_count)]\n",
+    "        \n",
+    "        while current_time < end_time:\n",
+    "            dt = mf6.get_time_step()\n",
+    "            mf6.prepare_time_step(dt)\n",
+    "\n",
+    "            if verbose:\n",
+    "                print(\n",
+    "                    f\"Solving: Stress Period {sim.kper + 1}; \"\n",
+    "                    f\"Timestep {sim.kstp + 1}\"\n",
+    "                )\n",
+    "\n",
+    "            for sol_id, slnobj in sorted(sim.solutions.items()):\n",
+    "                models = {}\n",
+    "                maxiter = slnobj.mxiter\n",
+    "                solution = {sol_id: slnobj}\n",
+    "                for model in sim.models:\n",
+    "                    if sol_id == model.solution_id:\n",
+    "                        models[model.name.lower()] = model\n",
+    "\n",
+    "                sim_grp = modflowapi.extensions.ApiSimulation(\n",
+    "                    mf6, models, solution, sim._exchanges, sim.tdis, sim.ats\n",
+    "                )\n",
+    "                mf6.prepare_solve(sol_id)\n",
+    "                if sim.kper != kperold[sol_id - 1]:\n",
+    "                    callback(sim_grp, Callbacks.stress_period_start)\n",
+    "                    kperold[sol_id - 1] += 1\n",
+    "                elif current_time == 0:\n",
+    "                    callback(sim_grp, Callbacks.stress_period_start)\n",
+    "\n",
+    "                kiter = 0\n",
+    "                callback(sim_grp, Callbacks.timestep_start)\n",
+    "\n",
+    "                if sim_grp.ats_period[0]:\n",
+    "                    mindt = sim_grp.ats_period[-1]\n",
+    "                    while sim_grp.delt > mindt:\n",
+    "                        sim_grp.iteration = kiter\n",
+    "                        callback(sim_grp, Callbacks.iteration_start)\n",
+    "                        has_converged = mf6.solve(sol_id)\n",
+    "                        callback(sim_grp, Callbacks.iteration_end)\n",
+    "                        kiter += 1\n",
+    "                        if has_converged and sim_grp.allow_convergence:\n",
+    "                            break\n",
+    "\n",
+    "                else:\n",
+    "                    while kiter < maxiter:\n",
+    "                        sim_grp.iteration = kiter\n",
+    "                        callback(sim_grp, Callbacks.iteration_start)\n",
+    "                        has_converged = mf6.solve(sol_id)\n",
+    "                        callback(sim_grp, Callbacks.iteration_end)\n",
+    "                        kiter += 1\n",
+    "                        if has_converged and sim_grp.allow_convergence:\n",
+    "                            break\n",
+    "\n",
+    "                callback(sim_grp, Callbacks.timestep_end)\n",
+    "                mf6.finalize_solve(sol_id)\n",
+    "\n",
+    "            mf6.finalize_time_step()\n",
+    "            current_time = mf6.get_current_time()\n",
+    "\n",
+    "            if not has_converged:\n",
+    "                print(f\"Simulation group: {sim_grp} DID NOT CONVERGE\")\n",
+    "\n",
+    "            if sim_grp.nstp == sim_grp.kstp + 1:\n",
+    "                callback(sim_grp, Callbacks.stress_period_end)\n",
+    "\n",
+    "        try:\n",
+    "            mf6.finalize()\n",
+    "        except Exception:\n",
+    "            raise RuntimeError(\"MF6 simulation failed, check listing file\")\n",
+    "        print(\"(mf6gwf) NORMAL TERMINATION OF SIMULATION\")\n",
+    "        \n",
+    "        #\n",
+    "        # Now run transport models\n",
+    "        #\n",
+    "        \n",
     "        for sim_mf6gwt in sim_mf6gwts:\n",
     "            sim_ws = sim_mf6gwt.sim_ws\n",
-    "            #success, buff = sim_mf6gwt.run_simulation(silent=silent)\n",
-    "            modflowapi.run_simulation(dll, sim_ws, callback_function, verbose=False)\n",
-    "            if not success:\n",
-    "                #print(buff)\n",
-    "                return success\n",
+    "            solute = sim_mf6gwt.solute\n",
+    "            mf6 = modflowapi.ModflowApi(libmf6, working_directory=sim_ws)\n",
+    "\n",
+    "            mf6.initialize()\n",
+    "\n",
+    "            sim = modflowapi.extensions.ApiSimulation.load(mf6)\n",
+    "\n",
+    "            if _develop:\n",
+    "                with open(f\"{sim_mf6gwt.sim_ws}/var_list.txt\", \"w\") as foo:\n",
+    "                    for name in mf6.get_input_var_names():\n",
+    "                        foo.write(f\"{name}\\n\")\n",
+    "\n",
+    "            has_converged = False\n",
+    "            current_time = mf6.get_current_time()\n",
+    "            end_time = mf6.get_end_time()\n",
+    "            kperold = [0 for _ in range(sim.subcomponent_count)]\n",
+    "\n",
+    "            while current_time < end_time:\n",
+    "                dt = mf6.get_time_step()\n",
+    "                mf6.prepare_time_step(dt)\n",
+    "\n",
+    "                if verbose:\n",
+    "                    print(\n",
+    "                        f\"Solving: Stress Period {sim.kper + 1}; \"\n",
+    "                        f\"Timestep {sim.kstp + 1}\"\n",
+    "                    )\n",
+    "\n",
+    "                for sol_id, slnobj in sorted(sim.solutions.items()):\n",
+    "                    models = {}\n",
+    "                    maxiter = slnobj.mxiter\n",
+    "                    solution = {sol_id: slnobj}\n",
+    "                    for model in sim.models:\n",
+    "                        if sol_id == model.solution_id:\n",
+    "                            models[model.name.lower()] = model\n",
+    "\n",
+    "                    sim_grp = modflowapi.extensions.ApiSimulation(\n",
+    "                        mf6, models, solution, sim._exchanges, sim.tdis, sim.ats\n",
+    "                    )\n",
+    "                    mf6.prepare_solve(sol_id)\n",
+    "                    if sim.kper != kperold[sol_id - 1]:\n",
+    "                        callback(sim_grp, Callbacks.stress_period_start)\n",
+    "                        kperold[sol_id - 1] += 1\n",
+    "                    elif current_time == 0:\n",
+    "                        callback(sim_grp, Callbacks.stress_period_start)\n",
+    "\n",
+    "                    kiter = 0\n",
+    "                    callback(sim_grp, Callbacks.timestep_start)\n",
+    "\n",
+    "                    if sim_grp.ats_period[0]:\n",
+    "                        mindt = sim_grp.ats_period[-1]\n",
+    "                        while sim_grp.delt > mindt:\n",
+    "                            sim_grp.iteration = kiter\n",
+    "                            callback(sim_grp, Callbacks.iteration_start)\n",
+    "                            has_converged = mf6.solve(sol_id)\n",
+    "                            callback(sim_grp, Callbacks.iteration_end)\n",
+    "                            kiter += 1\n",
+    "                            if has_converged and sim_grp.allow_convergence:\n",
+    "                                break\n",
+    "\n",
+    "                    else:\n",
+    "                        while kiter < maxiter:\n",
+    "                            sim_grp.iteration = kiter\n",
+    "                            callback(sim_grp, Callbacks.iteration_start)\n",
+    "                            has_converged = mf6.solve(sol_id)\n",
+    "                            callback(sim_grp, Callbacks.iteration_end)\n",
+    "                            kiter += 1\n",
+    "                            if has_converged and sim_grp.allow_convergence:\n",
+    "                                break\n",
+    "\n",
+    "                    callback(sim_grp, Callbacks.timestep_end)\n",
+    "                    mf6.finalize_solve(sol_id)\n",
+    "\n",
+    "                mf6.finalize_time_step()\n",
+    "                current_time = mf6.get_current_time()\n",
+    "\n",
+    "                if not has_converged:\n",
+    "                    print(f\"Simulation group: {sim_grp} DID NOT CONVERGE\")\n",
+    "\n",
+    "                if sim_grp.nstp == sim_grp.kstp + 1:\n",
+    "                    callback(sim_grp, Callbacks.stress_period_end)\n",
+    "\n",
+    "            try:\n",
+    "                mf6.finalize()\n",
+    "            except Exception:\n",
+    "                raise RuntimeError(\"MF6 simulation failed, check listing file\")\n",
+    "            print(f\"(mf6gwt({solute})) NORMAL TERMINATION OF SIMULATION\")\n",
+    "            \n",
     "    return success"
    ]
   },
@@ -804,25 +986,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "callback_step == Callbacks.initialize\n",
-      "callback_step == Callbacks.stress_period_start\n",
-      "NORMAL TERMINATION OF SIMULATION\n",
-      "callback_step == Callbacks.initialize\n",
-      "callback_step == Callbacks.stress_period_start\n",
-      "NORMAL TERMINATION OF SIMULATION\n",
-      "callback_step == Callbacks.initialize\n",
-      "callback_step == Callbacks.stress_period_start\n",
-      "NORMAL TERMINATION OF SIMULATION\n",
-      "callback_step == Callbacks.initialize\n",
-      "callback_step == Callbacks.stress_period_start\n",
-      "NORMAL TERMINATION OF SIMULATION\n",
-      "callback_step == Callbacks.initialize\n",
-      "callback_step == Callbacks.stress_period_start\n",
-      "NORMAL TERMINATION OF SIMULATION\n",
-      "callback_step == Callbacks.initialize\n",
-      "callback_step == Callbacks.stress_period_start\n",
-      "NORMAL TERMINATION OF SIMULATION\n",
-      "run_model  2,236.51 ms\n"
+      "(mf6gwf) NORMAL TERMINATION OF SIMULATION\n",
+      "(mf6gwt(Na)) NORMAL TERMINATION OF SIMULATION\n",
+      "(mf6gwt(Cl)) NORMAL TERMINATION OF SIMULATION\n",
+      "(mf6gwt(K)) NORMAL TERMINATION OF SIMULATION\n",
+      "(mf6gwt(Ca)) NORMAL TERMINATION OF SIMULATION\n",
+      "(mf6gwt(N(5))) NORMAL TERMINATION OF SIMULATION\n",
+      "run_model  1,874.00 ms\n"
      ]
     },
     {
