Added various different ways to execute run_model

--- a/notebooks/ex11.ipynb
+++ b/notebooks/ex11.ipynb
@@ -361,9 +361,9 @@
     "        saverecord=[(\"HEAD\", \"ALL\"), (\"BUDGET\", \"ALL\")],\n",
     "    )\n",
     "    \n",
-    "    # set sim_ws for use in run_model\n",
+    "    # set vars for use in run_model\n",
     "    sim.sim_ws = sim_ws\n",
-    "    \n",
+    "\n",
     "    return sim"
    ]
   },
@@ -483,7 +483,7 @@
     "    )\n",
     "    \n",
     "    # set vars for use in run_model\n",
-    "    sim.sim_ws = sim_ws    \n",
+    "    sim.sim_ws = sim_ws\n",
     "    sim.solute = solute\n",
     "    \n",
     "    return sim"
@@ -603,6 +603,31 @@
    "source": [
     "@config.timeit\n",
     "def run_model(sims, silent=True):\n",
+    "    success = True\n",
+    "    if config.runModel:\n",
+    "        success = False\n",
+    "        sim_mf6gwf, *sim_mf6gwts = sims\n",
+    "        success, buff = sim_mf6gwf.run_simulation(silent=silent)\n",
+    "        if not success:\n",
+    "            print(buff)\n",
+    "            return success\n",
+    "        for sim_mf6gwt in sim_mf6gwts:\n",
+    "            success, buff = sim_mf6gwt.run_simulation(silent=silent)\n",
+    "            if not success:\n",
+    "                print(buff)\n",
+    "                return success\n",
+    "    return success"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "01a20f46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@config.timeit\n",
+    "def run_model_api_inline_run_simulation(sims, silent=True):\n",
     "    success = True\n",
     "    if config.runModel:\n",
     "        # @todo update for other OSs\n",
@@ -806,6 +831,123 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1f732b67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@config.timeit\n",
+    "def run_model_api_run_simulation(sims, silent=True):\n",
+    "    success = True\n",
+    "    if config.runModel:\n",
+    "        # @todo update for other OSs\n",
+    "        libmf6 = Path(os.path.join(os.environ[\"USERPROFILE\"], \"AppData\\\\Local\\\\flopy\\\\bin\", \"libmf6\"))\n",
+    "        \n",
+    "        sim_mf6gwf, *sim_mf6gwts = sims        \n",
+    "        modflowapi.run_simulation(libmf6, sim_mf6gwf.sim_ws, callback_function, verbose=False)\n",
+    "        \n",
+    "        # @todo error checking\n",
+    "        for sim_mf6gwt in sim_mf6gwts:\n",
+    "            modflowapi.run_simulation(libmf6, sim_mf6gwt.sim_ws, callback_function, verbose=False)\n",
+    "    return success"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0f24875a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@config.timeit\n",
+    "def run_model_api_bmi(sims, silent=True):\n",
+    "    success = True\n",
+    "    if config.runModel:\n",
+    "        # @todo update for other OSs        \n",
+    "        libmf6 = Path(os.path.join(os.environ[\"USERPROFILE\"], \"AppData\\\\Local\\\\flopy\\\\bin\", \"libmf6\"))\n",
+    "\n",
+    "        sim_mf6gwf, *sim_mf6gwts = sims        \n",
+    "        mf6 = modflowapi.ModflowApi(libmf6, working_directory=sim_mf6gwf.sim_ws)\n",
+    "        mf6.initialize()\n",
+    "        \n",
+    "        current_time = mf6.get_current_time()\n",
+    "        end_time = mf6.get_end_time()\n",
+    "        while current_time < end_time:\n",
+    "            mf6.update()\n",
+    "            current_time = mf6.get_current_time()\n",
+    "        mf6.finalize()\n",
+    "        if not silent:\n",
+    "            print(\"(mf6gwf) NORMAL TERMINATION OF SIMULATION\")\n",
+    "        \n",
+    "        for sim_mf6gwt in sim_mf6gwts:\n",
+    "            mf6 = modflowapi.ModflowApi(libmf6, working_directory=sim_mf6gwt.sim_ws)\n",
+    "            mf6.initialize()\n",
+    "            \n",
+    "            current_time = mf6.get_current_time()\n",
+    "            end_time = mf6.get_end_time()           \n",
+    "            while current_time < end_time:\n",
+    "                mf6.update()\n",
+    "                current_time = mf6.get_current_time()\n",
+    "            mf6.finalize()\n",
+    "            if not silent:\n",
+    "                print(f\"(mf6gwt({sim_mf6gwt.solute})) NORMAL TERMINATION OF SIMULATION\")\n",
+    "    return success"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b6eee614",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@config.timeit\n",
+    "def run_model_api_xmi(sims, silent=True):\n",
+    "    success = True\n",
+    "    if config.runModel:\n",
+    "        # @todo update for other OSs        \n",
+    "        libmf6 = Path(os.path.join(os.environ[\"USERPROFILE\"], \"AppData\\\\Local\\\\flopy\\\\bin\", \"libmf6\"))\n",
+    "\n",
+    "        sim_mf6gwf, *sim_mf6gwts = sims        \n",
+    "        mf6 = modflowapi.ModflowApi(libmf6, working_directory=sim_mf6gwf.sim_ws)\n",
+    "        mf6.initialize()\n",
+    "        \n",
+    "        current_time = mf6.get_current_time()\n",
+    "        end_time = mf6.get_end_time()\n",
+    "        while current_time < end_time:\n",
+    "            dt = mf6.get_time_step()\n",
+    "            mf6.prepare_time_step(dt)\n",
+    "            # modify values here            \n",
+    "            mf6.do_time_step()\n",
+    "            # and maybe something here as well            \n",
+    "            mf6.finalize_time_step()            \n",
+    "            current_time = mf6.get_current_time()\n",
+    "        mf6.finalize()\n",
+    "        if not silent:\n",
+    "            print(\"(mf6gwf) NORMAL TERMINATION OF SIMULATION\")\n",
+    "        \n",
+    "        for sim_mf6gwt in sim_mf6gwts:\n",
+    "            mf6 = modflowapi.ModflowApi(libmf6, working_directory=sim_mf6gwt.sim_ws)\n",
+    "            mf6.initialize()\n",
+    "            \n",
+    "            current_time = mf6.get_current_time()\n",
+    "            end_time = mf6.get_end_time()           \n",
+    "            while current_time < end_time:\n",
+    "                dt = mf6.get_time_step()\n",
+    "                mf6.prepare_time_step(dt)\n",
+    "                # modify values here\n",
+    "                mf6.do_time_step()\n",
+    "                # and maybe something here as well\n",
+    "                mf6.finalize_time_step()\n",
+    "                current_time = mf6.get_current_time()\n",
+    "            mf6.finalize()\n",
+    "            if not silent:\n",
+    "                print(f\"(mf6gwt({sim_mf6gwt.solute})) NORMAL TERMINATION OF SIMULATION\")\n",
+    "    return success"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0bf39137",
    "metadata": {
@@ -817,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "c14c001d",
    "metadata": {},
    "outputs": [],
@@ -870,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "9047ca5a",
    "metadata": {
     "lines_to_next_cell": 2
@@ -945,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "9254e320",
    "metadata": {},
    "outputs": [],
@@ -956,7 +1098,14 @@
     "    \n",
     "    sims = build_model(key, **parameter_dict)\n",
     "    write_model(sims, silent=silent)\n",
-    "    success = run_model(sims, silent=silent)\n",
+    "    #success = run_model(sims, silent=silent)\n",
+    "    #success = run_model_api_inline_run_simulation(sims, silent=silent)\n",
+    "    #success = run_model_api_run_simulation(sims, silent=silent)\n",
+    "    success = run_model_api_bmi(sims, silent=silent)\n",
+    "    #success = run_model_api_xmi(sims, silent=silent)\n",
+    "    \n",
+    "    run_model_api_inline_run_simulation\n",
+    "    \n",
     "    if success:\n",
     "        for sidx, solute in enumerate(parameter_dict[\"solutes\"]):\n",
     "            plot_results_ct(sims, idx, sidx, **parameter_dict)\n",
@@ -965,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "d3e55848",
    "metadata": {},
    "outputs": [],
@@ -976,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "0542ad2b",
    "metadata": {
     "scrolled": false
@@ -986,13 +1135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(mf6gwf) NORMAL TERMINATION OF SIMULATION\n",
-      "(mf6gwt(Na)) NORMAL TERMINATION OF SIMULATION\n",
-      "(mf6gwt(Cl)) NORMAL TERMINATION OF SIMULATION\n",
-      "(mf6gwt(K)) NORMAL TERMINATION OF SIMULATION\n",
-      "(mf6gwt(Ca)) NORMAL TERMINATION OF SIMULATION\n",
-      "(mf6gwt(N(5))) NORMAL TERMINATION OF SIMULATION\n",
-      "run_model  1,874.00 ms\n"
+      "run_model_api_bmi  1,097.52 ms\n"
      ]
     },
     {
