--- a/notebooks/ex11-bmi-mmols-single.ipynb
+++ b/notebooks/ex11-bmi-mmols-single.ipynb
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e38e3e0e",
+   "id": "38f7b06c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9622b679",
+   "id": "0cb98454",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,6 @@
     "def run_model(sims, silent=True):\n",
     "    success = True\n",
     "    if config.runModel:\n",
-    "        #sim_phreeqcrm, sim_mf6gwf = sims\n",
     "        phreeqcrm, sim_mf6gwf = sims\n",
     "        concs = phreeqcrm.get_value_ptr(\"Concentrations\")\n",
     "        \n",
@@ -753,7 +752,7 @@
     "        simtimes = mf6gwt_ra[\"totim\"]\n",
     "        \n",
     "        dispersion_coefficient = (\n",
-    "            longitudinal_dispersivity * specific_discharge ## / retardation_factor\n",
+    "            longitudinal_dispersivity * specific_discharge\n",
     "        )\n",
     "        colors=[\"blue\", \"red\", \"green\"]\n",
     "        for i, x in enumerate([0.05, 4.05, 11.05]):\n",
