tweaked scaling for H and O.

--- a/notebooks/ex11-bmi-mmols-single_dlp.ipynb
+++ b/notebooks/ex11-bmi-mmols-single_dlp.ipynb
@@ -458,7 +458,6 @@
     "    tdis_ds = ((total_time, 400, 1.0),)    \n",
     "    flopy.mf6.ModflowTdis(sim, nper=nper, perioddata=tdis_ds, time_units=time_units)\n",
     "    ims = flopy.mf6.ModflowIms(sim, filename=f\"{name}.ims\")\n",
-    "        #, inner_dvclose=1e-9, outer_dvclose=1e-8, scaling_method=\"DIAGONAL\")\n",
     "    \n",
     "    gwf = flopy.mf6.ModflowGwf(sim, modelname=name, save_flows=True)\n",
     "    sim.register_ims_package(ims, [gwf.name])\n",
@@ -517,9 +516,11 @@
     "    for i, solute in enumerate(solutes):\n",
     "        name = f\"trans.{solute}\"\n",
     "        gwt = flopy.mf6.ModflowGwt(sim, modelname=name, save_flows=True)\n",
-    "        \n",
+    "        scale = \"DIAGONAL\"\n",
+    "        if name == \"H\" or name == \"O\":\n",
+    "            scale = \"none\"\n",
     "        imsgwt = flopy.mf6.ModflowIms(sim, linear_acceleration=\"bicgstab\", filename=f\"{gwt.name}.ims\",\n",
-    "            inner_dvclose=1e-9, outer_dvclose=1e-8, scaling_method=\"DIAGONAL\")\n",
+    "            inner_dvclose=1e-9, outer_dvclose=1e-8, scaling_method=scale)\n",
     "        sim.register_ims_package(imsgwt, [gwt.name])\n",
     "        \n",
     "        flopy.mf6.ModflowGwtdis(\n",
@@ -717,10 +718,8 @@
     "            phreeqcrm.set_value(\"Concentrations\", trans_concs)\n",
     "            phreeqcrm.update()\n",
     "            for i, solute in enumerate(phreeqcrm.solutes):\n",
-    "                #conc = mf6api.get_value_ptr(f\"TRANS.{solute.upper()}/X\") \n",
     "                #conc = phreeqcrm.GetIthConcentration(i)\n",
     "                conc = concs[i*nxyz:(i+1)*nxyz] * concentration_factor\n",
-    "                #conc = conc * concentration_factor\n",
     "                mf6api.set_value(f\"TRANS.{solute.upper()}/X\", conc)\n",
     "            current_time = mf6api.get_current_time()\n",
     "        mf6api.finalize()\n",
@@ -1009,7 +1008,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "run_model  51,753.48 ms\n"
+      "run_model  50,791.21 ms\n"
      ]
     },
     {
