I made mistakes in the scaling code

--- a/notebooks/ex11-bmi-mmols-single_dlp.ipynb
+++ b/notebooks/ex11-bmi-mmols-single_dlp.ipynb
@@ -516,9 +516,11 @@
     "    for i, solute in enumerate(solutes):\n",
     "        name = f\"trans.{solute}\"\n",
     "        gwt = flopy.mf6.ModflowGwt(sim, modelname=name, save_flows=True)\n",
+    "        # Use unscaled values for H and O\n",
     "        scale = \"DIAGONAL\"\n",
-    "        if name == \"H\" or name == \"O\":\n",
-    "            scale = \"none\"\n",
+    "        if (solutes[0] != \"H2O\"):\n",
+    "            if solute == \"H\" or solute == \"O\":\n",
+    "                scale = \"none\"\n",
     "        imsgwt = flopy.mf6.ModflowIms(sim, linear_acceleration=\"bicgstab\", filename=f\"{gwt.name}.ims\",\n",
     "            inner_dvclose=1e-9, outer_dvclose=1e-8, scaling_method=scale)\n",
     "        sim.register_ims_package(imsgwt, [gwt.name])\n",
@@ -982,7 +984,7 @@
     "        solutes = phreeqcrm.solutes\n",
     "        conc =  run_ex11()\n",
     "        for sidx, solute in enumerate(solutes):\n",
-    "            if sidx > 2:\n",
+    "            if (solute != \"H2O\" and solute != \"H\" and solute != \"O\" and solute != \"Charge\"):\n",
     "                plot_results_ct(sims, idx, sidx, solutes, conc, **parameter_dict)\n",
     "    "
    ]
@@ -1008,7 +1010,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "run_model  50,791.21 ms\n"
+      "run_model  29,149.73 ms\n"
      ]
     },
     {
