example(ex-gwe-bhe): Thermal loading of borehole heat exchangers (#265)
* started work on ex-gwe-bhe

* copied exampled from local file

* created py script for ex-gwe-bhe

* changed model basenames and timed functions

* working on latex docs

* added latex example description

* figure captions

* figsizes and captions

* parameters for latex table + docs

* fixed latex issues

* ruff

* lint

* added name + adjusted ex description

* added comma

---------

Co-authored-by: Eric Morway <emorway@usgs.gov>

--- a/doc/body.tex
+++ b/doc/body.tex
@@ -274,6 +274,10 @@
 \insection
 \input{sections/ex-gwe-barends.tex}
 
+\clearpage
+\insection
+\input{sections/ex-gwe-bhe.tex}
+
 % PRT Model examples
 \clearpage
 \insection
