--- a/doc/mf6examples.tex
+++ b/doc/mf6examples.tex
@@ -107,7 +107,7 @@ xleftmargin=.1in
 
 \title{\color{white} MODFLOW 6 -- Example problems}
 \author{\color{white} MODFLOW 6 Development Team, \\
-\color{white} with contributions from Chieh Ying Chen and Mike Toews}
+\color{white} with contributions from Chieh Ying Chen, Cas Neyens, and Mike Toews}
 \date{\color{white} \currentmodflowversion}
 
 \urlstyle{rm}
